# brewblox-boilerplate

./: .env  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  Pipfile  README.md  azure-pipelines.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tasks.py  tox.ini
.github/workflows/: build.yml
YOUR_PACKAGE/: __main__.py  events_example.py  http_example.py  models.py  poll_example.py  publish_example.py  subscribe_example.py
docker/: .gitignore  Dockerfile  before_build.sh  localbuild.sh
docker/amd/: Dockerfile
docker/arm/: Dockerfile
test/: conftest.py  test_boilerplate.py  test_hello.py  test_http_example.py  test_mqtt_publish_example.py  test_publish_example.py  test_subscribe_example.py
your_package/: app_factory.py  http_example.py  models.py  mqtt.py  mqtt_publish_example.py  mqtt_subscribe_example.py  utils.py
