[tool.poetry]
name = "YOUR-PACKAGE"
version = "0.1.0"
description = "ADD DESCRIPTION HERE"
authors = ["Code Fairies Inc <noreply@santa.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
brewblox-service = "^3.1.2"
cryptography = "40.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
flake8 = "*"
autopep8 = "*"
aresponses = "*"
flake8-quotes = "*"
invoke = "==2.*"

[build-system]
requires = ["poetry>=0.12", "cryptography==40.0.1"]
build-backend = "poetry.masonry.api"
